# Terminal_Portfolio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: deploy.yml
assets/: main.css
src/: main.rs
styles/: tailwind.css
templates/components/: history.html  jm_50.html  jm_70.html  jm_full.html  modal.html  neofetch.html  term-info.html  term-line.html  todo-form.html  toolbar.html  welcome.html
templates/layouts/: base.html
templates/macro/: form-macro.html
templates/menus/: game.html  help.html  info_cmd.html  projects.html  welcome.html
templates/pages/: another-page.html  hello.html  terminal.html
